results/logs/pipeline_20251116_085424.log
2025-11-16 08:54:24,432 - INFO - Starting BBB-penetrating peptide design pipeline
2025-11-16 08:54:24,432 - INFO - Target receptor: LRP1
2025-11-16 08:54:24,432 - INFO - Using device: cuda
2025-11-16 08:54:24,432 - INFO - Step 1: Training classifier
2025-11-16 08:54:24,432 - INFO - Running: python -m src.train_classifier --config config.yaml
2025-11-16 08:54:31,124 - INFO - Command succeeded: python -m src.train_classifier --config config.yaml
2025-11-16 08:54:31,124 - INFO - Output: [train_classifier] Using device: cuda
[train_classifier] Loading data...
[data_loader] Loaded 214 sequences (37 positive, 177 negative)
[data_loader] Created loaders - Train: 5 batches, Val: 1 batches, Test: 1 batches
[train_classifier] Creating model...
[classifier_factory] Model config:
  - type: basic
  - embedding_dim: 128
  - hidden_dim: 256
  - vocab_size: 21
  - dropout: 0.3
  - num_classes: 2
  - type: basic
[train_classifier] Model parameters: 2,436,035
[train_classifier] Starting training...
Epoch   1 | Train Loss: 0.5817 | Val Loss: 0.5887 | Acc: 0.8125 | F1: 0.0000 | AUC: 0.4167 | Val samples: 32 (6+/26-)
[train_classifier] Saved best model to checkpoints/classifier_best.pth
Epoch   2 | Train Loss: 0.4592 | Val Loss: 0.5054 | Acc: 0.8125 | F1: 0.0000 | AUC: 0.5321 | Val samples: 32 (6+/26-)
[train_classifier] Saved best model to checkpoints/classifier_best.pth
Epoch   3 | Train Loss: 0.3869 | Val Loss: 0.6158 | Acc: 0.8125 | F1: 0.0000 | AUC: 0.5577 | Val samples: 32 (6+/26-)
Epoch   4 | Train Loss: 0.2835 | Val Loss: 0.7017 | Acc: 0.7812 | F1: 0.0000 | AUC: 0.6218 | Val samples: 32 (6+/26-)
Epoch   5 | Train Loss: 0.2430 | Val Loss: 0.6271 | Acc: 0.7500 | F1: 0.0000 | AUC: 0.6538 | Val samples: 32 (6+/26-)
Epoch   6 | Train Loss: 0.2173 | Val Loss: 0.8423 | Acc: 0.7812 | F1: 0.0000 | AUC: 0.6538 | Val samples: 32 (6+/26-)
Epoch   7 | Train Loss: 0.1727 | Val Loss: 0.5497 | Acc: 0.7812 | F1: 0.2222 | AUC: 0.6795 | Val samples: 32 (6+/26-)
Epoch   8 | Train Loss: 0.1364 | Val Loss: 0.8312 | Acc: 0.7812 | F1: 0.0000 | AUC: 0.6154 | Val samples: 32 (6+/26-)
Epoch   9 | Train Loss: 0.0552 | Val Loss: 0.9695 | Acc: 0.7812 | F1: 0.2222 | AUC: 0.6603 | Val samples: 32 (6+/26-)
Epoch  10 | Train Loss: 0.0465 | Val Loss: 1.3326 | Acc: 0.7812 | F1: 0.0000 | AUC: 0.6090 | Val samples: 32 (6+/26-)
Epoch  11 | Train Loss: 0.0350 | Val Loss: 1.2197 | Acc: 0.8438 | F1: 0.5455 | AUC: 0.6154 | Val samples: 32 (6+/26-)
Epoch  12 | Train Loss: 0.0927 | Val Loss: 1.8321 | Acc: 0.8125 | F1: 0.0000 | AUC: 0.4872 | Val samples: 32 (6+/26-)
[train_classifier] Early stopping at epoch 12

[train_classifier] Final evaluation on test set...
Test Results:
  Loss: 1.4563
  Accuracy: 0.7812
  F1 Score: 0.0000
  AUC: 0.6889
  Confusion Matrix:
    True Negatives: 25
    False Positives: 2
    False Negatives: 5
    True Positives: 0
[train_classifier] Training completed. Metrics saved to results/classifier_metrics.json

2025-11-16 08:54:31,124 - INFO - Step 2: Temperature calibration
2025-11-16 08:54:31,124 - INFO - Running: python -m src.calibrate_temperature --config config.yaml
2025-11-16 08:54:40,155 - INFO - Command succeeded: python -m src.calibrate_temperature --config config.yaml
2025-11-16 08:54:40,156 - INFO - Output: [calibrate_temperature] Using device: cuda
[calibrate_temperature] Loading model from checkpoints/classifier_best.pth
[calibrate_temperature] Loading validation data...
[data_loader] Loaded 214 sequences (37 positive, 177 negative)
[data_loader] Created loaders - Train: 5 batches, Val: 1 batches, Test: 1 batches
[calibrate_temperature] Starting temperature calibration...
[calibrate_temperature] Calibrated temperature: 0.6962
[calibrate_temperature] Evaluating calibration...
[calibrate_temperature] Expected Calibration Error:
  Original: 0.1373
  Calibrated: 0.1015
  Improvement: 0.0358
[calibrate_temperature] Temperature parameter saved to results/temperature.json
[calibrate_temperature] Calibrated model saved to checkpoints/classifier_best_calibrated.pth

2025-11-16 08:54:40,156 - INFO - Step 3: RL training
2025-11-16 08:54:40,156 - INFO - Running: python -m src.train_rl_ppo --config config.yaml --target LRP1
2025-11-16 08:54:40,214 - ERROR - Command failed: python -m src.train_rl_ppo --config config.yaml --target LRP1
2025-11-16 08:54:40,214 - ERROR - Error output: Traceback (most recent call last):
  File "/home/wuhaigang/anaconda3/envs/openmm-env/lib/python3.8/runpy.py", line 185, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/wuhaigang/anaconda3/envs/openmm-env/lib/python3.8/runpy.py", line 155, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/wuhaigang/WHG/NiuNiu1/src/train_rl_ppo.py", line 578
    if last_loss_info is not None:
    ^
IndentationError: expected an indented block

2025-11-16 08:54:40,214 - ERROR - RL training failed
